# freemind

./: .eslintignore  .eslintrc.cjs  .prettierignore  .prettierrc  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json  vite.config.js  vitest.config.js
.github/workflows/: main.yml
assets/: entitlements.plist
src/: app.html  settings.ts  setupTests.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: Info.plist  entitlements.plist  main.wxs  tech.tanay.freemind.policy
src-tauri/src/: main.rs
src/lib/: focus.ts  settings.ts  utils.ts
src/lib/components/: BlockGroups.svelte  BlockSites.svelte  BlockSitesTable.svelte  Counter.svelte  Counter.test.ts  Footer.svelte  Footer.test.ts  Header.svelte  StatusBadge.svelte  WebsiteGroupItem.svelte  WebsiteListItem.svelte
src/lib/components/data-table/: data-table-actions.svelte  data-table-checkbox.svelte
src/lib/components/ui/badge/: badge.svelte  index.ts
src/lib/components/ui/button/: button.svelte  index.ts
src/lib/components/ui/checkbox/: checkbox.svelte
src/lib/components/ui/dropdown-menu/: dropdown-menu-checkbox-item.svelte  dropdown-menu-content.svelte  dropdown-menu-item.svelte  dropdown-menu-label.svelte  dropdown-menu-radio-item.svelte  dropdown-menu-separator.svelte  dropdown-menu-shortcut.svelte  dropdown-menu-sub-content.svelte  dropdown-menu-sub-trigger.svelte  index.ts
src/lib/lists/: adult.ts  entertainment.ts  gaming.ts  news.ts  shopping.ts  socialMedia.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/preferences/: +page.svelte
(+19 files in other folders)
